Clear out unused helper methods